--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 PORT=3000
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=user
-DB_PASSWORD=password
-DB_DATABASE=article_api
+POSTGRES_DB=article_api
+POSTGRES_HOST=localhost
+POSTGRES_PASSWORD=password
+POSTGRES_USER=postgres
+POSTGRES_PORT=5432
+
+REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 JWT_SECRET=secret
 JWT_EXPIRATION_TIME=600s
